# nsroot

./: .gitignore  Cargo.toml  gcc  profile
nsroot/: Cargo.toml
nsroot/src/: main.rs
src/: bind.rs  chroot.rs  lib.rs  main.rs
x86_64/: genenv.sh
x86_64/fish/3.7.1/share/doc/fish/: .buildinfo  commands.html  completions.html  design.html  faq.html  fish_for_bash_users.html  genindex.html  index.html  interactive.html  language.html  license.html  objects.inv  prompt.html  relnotes.html  search.html  searchindex.js  tutorial.html
x86_64/fish/3.7.1/share/doc/fish/cmds/: _.html  abbr.html  alias.html  and.html  argparse.html  begin.html  bg.html  bind.html  block.html  break.html  breakpoint.html  builtin.html  case.html  cd.html  cdh.html  command.html  commandline.html  complete.html  contains.html  continue.html  count.html  dirh.html  dirs.html  disown.html  echo.html  else.html  emit.html  end.html  eval.html  exec.html  exit.html  false.html  fg.html  fish.html  fish_add_path.html  fish_breakpoint_prompt.html  fish_clipboard_copy.html  fish_clipboard_paste.html  fish_command_not_found.html  fish_config.html  (+81 more)
x86_64/fish/3.7.1/share/fish/: __fish_build_paths.fish
x86_64/fish/3.7.1/share/man/man1/: fish.1
x86_64/fish/3.7.1/share/pkgconfig/: fish.pc
x86_64/git/2.45.2/libexec/git-core/: git-archimport  git-citool  git-cvsexportcommit  git-cvsimport  git-daemon  git-http-backend  git-instaweb  git-send-email  git-sh-i18n  git-sh-i18n--envsubst  git-svn  scalar
x86_64/git/2.45.2/share/gitweb/: gitweb.cgi
x86_64/git/2.45.2/share/perl5/Git/: I18N.pm
(+128 files in other folders)
