[package]
name = "nsroot"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", default-features = true, features = [
    "mount",
    "sched",
    "user",
    "signal",
    "fs",
] }
libc = "0.2.158"
clap = { version = "4.5.16", features = ["cargo", "derive"] }
log = "*"
env_logger = ">0.9.0"
